<resources>
    <string name="app_name">SearchMovie</string>
    <string name="hint_text">Type a movie</string>
    <string name="search_text">Search</string>
    <string name="movie_title_text">Movie Title</string>
    <string name="movie_ratings_text">Ratings</string>
    <string name="movie_release_date_text">Release Date</string>
    <string name="movie_language_text">Language</string>
    <string name="search_movie">Search Movie</string>
    <string name="detailed_movie_rating_text">Detailed Movie Rating Text</string>
    <string name="detailed_movie_runtime_text">Detailed Movie Runtime Text</string>
    <string name="detailed_movie_tagline_text">Detailed Movie Tagline Text</string>
    <string name="detailed_movie_title_text">Detailed Movie Title Text</string>
    <string name="detailed_movie_overview_text">Detailed Overview</string>
    <string name="overview_title">Overview</string>
    <string name="detailed_movie_release_date_text">yyyy-MM-dd</string>
    <string name="detailed_movie_genres_text">Detailed Movie Genre(s) Text</string>
    <string name="release_date_title">Release Date</string>
    <string name="genres_title">Genre(s)</string>
    <string name="detailed_movie_languages_text">Detailed Movie Language(s) Text</string>
    <string name="languages_title">Language(s) spoken</string>
</resources>
