<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detailed_poster_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            tools:src="@drawable/image_poster_sample" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_toRightOf="@id/detailed_poster_image">

            <TextView
                android:id="@+id/detailed_movie_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/detailed_movie_title_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/detailed_movie_tagline_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/detailed_movie_tagline_text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:id="@+id/detailed_movie_runtime_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/detailed_movie_runtime_text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:id="@+id/detailed_movie_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/detailed_movie_rating_text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        </LinearLayout>

    </RelativeLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailed_movie_languages_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailed_movie_languages_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres_title"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detailed_movie_genres_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailed_movie_genres_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date_title"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detailed_movie_release_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailed_movie_release_date_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview_title"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detailed_movie_overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailed_movie_overview_text"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>